# ontology

./: .gitattributes  .gitignore  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  ctl.bat  ctl.ps1  restart.sh  start.bat  start.sh  stop.bat  stop.sh
backend/: .env.example  import_schema.py  migrate_multimodal.py  migrate_sqlite_to_mysql.py  ontology.db  pyproject.toml  requirements.txt  ruff.toml  seed.py  seed_workflows.py  test_import_v2.py  test_schema_data.py  write_neo4j.py
backend/app/: __init__.py  agent_tools.py  config.py  database.py  db_compat.py  main.py  object_catalog.py  platform.py
backend/mappings/: doim_mapping.csv
backend/ontology/: doim-core.ttl  porting-risk.rules  telecom-porting.ttl  telecom-shapes.ttl
backend/rules/: porting-risk.yaml
backend/scenarios/: telecom-porting.yaml
backend/scripts/: migrate_credentials.py  migrate_split_datasource.py  seed_broadband_data.py  seed_business_assets.py  test-monitor-platform-stats.py  test-monitor-schema-compat.py
backend/tests/: test_action_executors.py  test_agent_api_errors.py  test_agent_chat_history.py  test_agent_conversation_api.py  test_agent_test_conversation.py  test_agent_tools_tier2.py  test_ai_code_service.py  test_asset_tree.py  test_code_validator.py  test_copilot_agent_chat.py  test_csv_loader.py  test_excel_import.py  test_function_executor.py  test_function_runtime_e2e.py  test_function_runtime_executor.py  test_function_runtime_models.py  test_function_runtime_registry.py  test_function_runtime_sandbox.py  test_function_runtime_watcher.py  test_functions_delete_api.py  (+19 more)
(+848 files in other folders)
